--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.969.0",
+    "@aws-sdk/s3-request-presigner": "^3.969.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -23,12 +25,13 @@
     "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.3.1",
     "helmet": "^8.1.0",
-    "jsdom": "^27.1.0",
+    "jsdom": "^22.1.0",
     "mime-types": "^3.0.1",
     "mongoose": "^8.18.0",
     "razorpay": "^2.9.6",
     "redis": "^5.8.3",
     "resend": "^6.1.0",
+    "serverless-http": "^4.0.0",
     "zod": "^4.1.12"
   }
 }
