--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "resend": "^6.1.0",
     "serverless-http": "^4.0.0",
     "zod": "^4.1.12"
+  },
+  "devDependencies": {
+    "serverless-domain-manager": "^8.0.0"
   }
 }
